--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "core-js": "^3.9.1",
     "dotenv": "^8.2.0",
+    "eslint-config-google": "^0.14.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "regenerator-runtime": "^0.13.7",
